--- a/style.css
+++ b/style.css
@@ -11,10 +11,34 @@ body {
 
 }
 
+.tagline {
+  color: black;
+}
+
+.navbartitle {
+  font-size: 20px;
+}
+
+a:link {
+  color:white;
+}
+
+.title3 {
+  font-size: 40px;
+  color: white;
+}
+
+h1 {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+p {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 section.hero {
-  /* Sizing & Background */
-  height: 100vh; 
-  background-image: url('./images/hero-bg.png'); 
+  height: 60vh; 
+  background-image: url('./images/hero-bg.jpeg'); 
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;
@@ -26,14 +50,56 @@ section.hero {
 }
 
 .tagline {
-  font-size: 38px;
+  font-size: 2.3em;
+  -webkit-text-stroke-width: 0.5px; 
+  -webkit-text-stroke-color: rgb(255, 255, 255); 
+ 
+}
+
+.album {
+  height: 120vh; 
+  background-image: url('./images/projects-bg.jpeg'); 
+  background-size: cover; 
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.title {
+  font-size: 6.4rem;
+  -webkit-text-stroke-width: 4px; 
+  -webkit-text-stroke-color: black; 
+}
+
+.title2 {
+  font-size: 4rem;
   -webkit-text-stroke-width: 2px; 
+  -webkit-text-stroke-color: black; 
+}
+
+ul {
+  font-size: x-large;
+}
+
+.skills {
+  height: 50vh; 
+  background-image: url('./images/skills-bg.jpeg'); 
+  background-size: cover; 
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 1000px) {
+  .tagline {
+  font-size: 1.5rem;
+  -webkit-text-stroke-width: 1px; 
   -webkit-text-stroke-color: black; 
  
 }
 
 .title {
-  font-size: 105px;
+  font-size: 4rem;
   -webkit-text-stroke-width: 4px; 
   -webkit-text-stroke-color: black; 
 }
+}
+
